tests/type-check/bad/dot-doesnt-deref-check.arr
data Foo:
  | foo(ref bar :: Number)
end

my-foo = foo(5)

e :: Number = my-foo.bar
